---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/select_implicit.sql
snapshot_kind: text
---
CREATE TABLE test_missing_target (
  a INT,
  b INT,
  c CHAR(8),
  d CHAR(1)
);

INSERT INTO test_missing_target VALUES (0, 1, 'XXXX', 'A');

INSERT INTO test_missing_target VALUES (1, 2, 'ABAB', 'b');

INSERT INTO test_missing_target VALUES (2, 2, 'ABAB', 'c');

INSERT INTO test_missing_target VALUES (3, 3, 'BBBB', 'D');

INSERT INTO test_missing_target VALUES (4, 3, 'BBBB', 'e');

INSERT INTO test_missing_target VALUES (5, 3, 'bbbb', 'F');

INSERT INTO test_missing_target VALUES (6, 4, 'cccc', 'g');

INSERT INTO test_missing_target VALUES (7, 4, 'cccc', 'h');

INSERT INTO test_missing_target VALUES (8, 4, 'CCCC', 'I');

INSERT INTO test_missing_target VALUES (9, 4, 'CCCC', 'j');

SELECT
  c,
  COUNT(*)
FROM
  test_missing_target
GROUP BY test_missing_target.c
ORDER BY c;

SELECT
  COUNT(*)
FROM
  test_missing_target
GROUP BY test_missing_target.c
ORDER BY c;

SELECT COUNT(*) FROM test_missing_target GROUP BY a ORDER BY b;

SELECT COUNT(*) FROM test_missing_target GROUP BY b ORDER BY b;

SELECT
  test_missing_target.b,
  COUNT(*)
FROM
  test_missing_target
GROUP BY b
ORDER BY b;

SELECT c FROM test_missing_target ORDER BY a;

SELECT COUNT(*) FROM test_missing_target GROUP BY b ORDER BY b DESC;

SELECT COUNT(*) FROM test_missing_target ORDER BY 1 DESC;

SELECT c, COUNT(*) FROM test_missing_target GROUP BY 1 ORDER BY 1;

SELECT c, COUNT(*) FROM test_missing_target GROUP BY 3;

SELECT
  COUNT(*)
FROM
  test_missing_target AS x,
  test_missing_target AS y
WHERE
  x.a = y.a
GROUP BY b
ORDER BY b;

SELECT a, a FROM test_missing_target ORDER BY a;

SELECT a / 2, a / 2 FROM test_missing_target ORDER BY a / 2;

SELECT a / 2, a / 2 FROM test_missing_target GROUP BY a / 2 ORDER BY a / 2;

SELECT
  x.b,
  COUNT(*)
FROM
  test_missing_target AS x,
  test_missing_target AS y
WHERE
  x.a = y.a
GROUP BY x.b
ORDER BY x.b;

SELECT
  COUNT(*)
FROM
  test_missing_target AS x,
  test_missing_target AS y
WHERE
  x.a = y.a
GROUP BY x.b
ORDER BY x.b;

CREATE TABLE test_missing_target2
AS
  SELECT
    COUNT(*)
  FROM
    test_missing_target AS x,
    test_missing_target AS y
  WHERE
    x.a = y.a
  GROUP BY x.b
  ORDER BY x.b;

SELECT * FROM test_missing_target2;

SELECT
  a % 2,
  COUNT(b)
FROM
  test_missing_target
GROUP BY test_missing_target.a % 2
ORDER BY test_missing_target.a % 2;

SELECT
  COUNT(c)
FROM
  test_missing_target
GROUP BY lower(test_missing_target.c)
ORDER BY lower(test_missing_target.c);

SELECT COUNT(a) FROM test_missing_target GROUP BY a ORDER BY b;

SELECT COUNT(b) FROM test_missing_target GROUP BY b / 2 ORDER BY b / 2;

SELECT
  lower(test_missing_target.c),
  COUNT(c)
FROM
  test_missing_target
GROUP BY lower(c)
ORDER BY lower(c);

SELECT a FROM test_missing_target ORDER BY upper(d);

SELECT
  COUNT(b)
FROM
  test_missing_target
GROUP BY (b + 1) / 2
ORDER BY (b + 1) / 2 DESC;

SELECT
  COUNT(x.a)
FROM
  test_missing_target AS x,
  test_missing_target AS y
WHERE
  x.a = y.a
GROUP BY b / 2
ORDER BY b / 2;

SELECT
  x.b / 2,
  COUNT(x.b)
FROM
  test_missing_target AS x,
  test_missing_target AS y
WHERE
  x.a = y.a
GROUP BY x.b / 2
ORDER BY x.b / 2;

SELECT
  COUNT(b)
FROM
  test_missing_target AS x,
  test_missing_target AS y
WHERE
  x.a = y.a
GROUP BY x.b / 2;

CREATE TABLE test_missing_target3
AS
  SELECT
    COUNT(x.b)
  FROM
    test_missing_target AS x,
    test_missing_target AS y
  WHERE
    x.a = y.a
  GROUP BY x.b / 2
  ORDER BY x.b / 2;

SELECT * FROM test_missing_target3;

DROP TABLE "test_missing_target";

DROP TABLE "test_missing_target2";

DROP TABLE "test_missing_target3";
